# afu-photo-review-tool

./: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
src/: app.html
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/prisma/: data.db  schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/data/: mod.rs
src/lib/: image-zoom.js  rotate_front_end.js  rotates.js  rust_functions.js  store.js
src/routes/: +layout.svelte  +page.svelte
src/routes/progress/: +page.svelte  pg_progress.svelte  whole_progress.svelte
src/routes/review/: +page.svelte  identity_form.svelte  progress_panel.svelte  review_panel.svelte
src/routes/settings/: +layout.svelte
src/routes/settings/paths/: +page.svelte
src/routes/settings/photographers/: +page.svelte
unused/api/photo_rotated/: +server.js
