[package]
name = "app"
version = "0.1.0"
description = "Back end for image review application"
authors = ["Eklemis Santo Ndun"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
walkdir = "2.3.2"
image = "0.24.5"
base64 = "0.21.0"
fast_image_resize = "2.6.0"
#prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5", default-features = false, features = ["sqlite"] }
tokio = "1.26.0"
calamine = "0.19.1"
[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
#diesel = { version = "2.0.0", features = ["postgres"] }
#dotenvy = "0.15"
#prisma = { path = "node_modules/.prisma/client" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

#[workspace]
#resolver = "2"
#members = ["prisma-cli"]

